--- a/templates/account/dashboard_purchase.html
+++ b/templates/account/dashboard_purchase.html
@@ -81,12 +81,12 @@ csrfmiddlewaretoken : "{{ csrf_token }}"
                                     buyer_tel: buyer_phone
                                 }, function (rsp) {
                                     if (rsp.success) {
-                                        var msg = '결제가 완료되었습니다.';
-                                        msg += '고유ID : ' + rsp.imp_uid;
-                                        msg += '상점 거래ID : ' + rsp.merchant_uid;
-                                        msg += '결제 금액 : ' + rsp.paid_amount;
-                                        msg += '카드 승인번호 : ' + rsp.apply_num;
-                                        console.log(msg);
+                                        //var msg = '결제가 완료되었습니다.';
+                                        //msg += '고유ID : ' + rsp.imp_uid;
+                                        //msg += '상점 거래ID : ' + rsp.merchant_uid;
+                                        //msg += '결제 금액 : ' + rsp.paid_amount;
+                                        //msg += '카드 승인번호 : ' + rsp.apply_num;
+                                        //console.log(msg);
                                         ImpTransaction(e, rsp.merchant_uid, rsp.imp_uid, rsp.paid_amount);
                                     } else {
                                         var msg = '결제에 실패하였습니다.';
