change field 'product'->'detail' in PointHistory model'

--- a/templates/account/dashboard_point_history.html
+++ b/templates/account/dashboard_point_history.html
@@ -133,9 +133,7 @@
                         <tr>
                             <td class="history-num-u">{{ forloop.revcounter }}</td>
                             <td class="history-date-u">{{ item.timestamp|date:"m.d" }}</td>
-                            <td class="history-product-u"><a
-                                    href="{{ item.get_absolute_url }}">{{ item.title|truncatechars:23 }}</a>
-                            </td>
+                            <td class="history-product-u">{{ item.detail|truncatechars:23 }}</td>
                             <td class="history-amount-u">{{ item.amount|multi_minus }}원</td>
                             <td class="history-status-u">{{ item.status }}</td>
                         </tr>
