fix errors in 'Profit' model

--- a/templates/seller/profit_manage.html
+++ b/templates/seller/profit_manage.html
@@ -64,7 +64,7 @@
                     <img src="{% static 'img/influe_03.png' %}">
                 </div>
                 <div class="money" style="color: #777;">
-                    0<span class="unit">원</span>
+                    {{ completed_profit }}<span class="unit">원</span>
                 </div>
             </div>
             <div class="dashboard-info-summary info-order-process">
