--- a/templates/account/account_detail.html
+++ b/templates/account/account_detail.html
@@ -18,6 +18,9 @@
                     </div>
                     <div class="user_name">
                         <div style="margin-top:10px;">{{ user.name }}</div>
+                        <div>
+                            <button>문의하기</button>
+                        </div>
                     </div>
                 </div>
                 <div class="detail_content_top_right">
