--- a/templates/seller/profit_manage.html
+++ b/templates/seller/profit_manage.html
@@ -58,27 +58,30 @@
             </div>
             <div class="dashboard-info-summary info-order-process">
                 <div class="dashboard-info-summary-title">
-                    출금완료
+                    출금진행
+                    <div class="meta">
+                        출금 진행중인 금액
+                    </div>
                 </div>
                 <div class="dashboard-info-summary-count">
-                    <img src="{% static 'img/influe_03.png' %}">
+                    <img src="{% static 'img/influe_04.png' %}">
                 </div>
                 <div class="money" style="color: #777;">
-                    {{ completed_profit }}<span class="unit">원</span>
+                    {{ requested_profit }}<span class="unit">원</span>
                 </div>
             </div>
             <div class="dashboard-info-summary info-order-process">
                 <div class="dashboard-info-summary-title">
-                    잔고전환
+                    출금완료
                     <div class="meta">
-                        예치금으로 전환한 수익금
+                        계좌로 출금완료한 총 금액
                     </div>
                 </div>
                 <div class="dashboard-info-summary-count" style="background: #648efc;">
-                    <img src="{% static 'img/influe_04.png' %}">
+                    <img src="{% static 'img/influe_03.png' %}">
                 </div>
                 <div class="money" style="color: #648efc;">
-                    0<span class="unit">원</span>
+                    {{ completed_profit }}<span class="unit">원</span>
                 </div>
             </div>
         </div>
