change button to input tag

--- a/templates/seller/profit_manage.html
+++ b/templates/seller/profit_manage.html
@@ -99,9 +99,10 @@
                 </div>
             </div>
             <div class="profit-info-right">
-                <button type="submit">출금하기</button>
+                <input type="submit" value="계좌수정"/>
             </div>
         </div>
+
         </form>
 
     </div>
