--- a/static/css/dashboard/purchase_list.css
+++ b/static/css/dashboard/purchase_list.css
@@ -315,6 +315,11 @@
     background: none;
 }
 
+.item-list .table_product_btn.change input{
+    background: none;
+    color:white;
+}
+
 /* table_product_detail */
 .table_product_detail{
     width:99%;
@@ -404,7 +409,7 @@
 
 .table_product_detail_bottom ul li:nth-child(1) {
     width:20%;
-    margin-left:13%;
+    margin-left:22%;
 }
 
 .table_product_detail_bottom ul li button{
@@ -421,12 +426,99 @@
     border:1px solid #648efc;
 }
 
+.table_product_detail_bottom ul li .review {
+    background-color: white;
+    width:100%;
+    height:30px;
+    color:grey;
+    border:1px solid grey;
+}
+
+.table_product_detail_bottom ul li .repurchase {
+    background-color: white;
+    width:100%;
+    height:30px;
+    color:grey;
+    border:1px solid grey;
+}
+
 .table_product_detail_bottom ul li .detail_bottom_btn {
     background-color: white;
     width:100%;
     height:30px;
     color:grey;
     border:1px solid grey;
+}
+
+/* status_table part */
+.status_table{
+    width:100%;
+    clear:both;
+    margin-top:20%;
+}
+
+.status_table table{
+    width:100%;
+    border-collapse: collapse;
+}
+
+.status_table table td{
+    border: 1px solid #e8e8e8;
+    border-spacing: 0;
+}
+
+.status_table .status_table_content{
+    height:30px;
+    padding-top:1%;
+}
+
+.status_table .status_table_content .status_table_title{
+    display: inline-block;
+    margin-left:5%;
+    font-size: 12px;
+    width:13%;
+    height:65%;
+}
+
+.status_table .status_table_content .status_table_title div{
+    width:100%;
+    height:100%;
+    background-color: #648efc;
+    color:white;
+    padding-top:7%;
+    text-align: center;
+}
+
+.status_table .status_table_content .status_table_text{
+    display: inline-block;
+    margin-left:2%;
+    font-size: 13px;
+}
+
+/* refund part */
+
+.product_item_each_wrapper .purchase-table-ul.refund{
+    width:90%;
+}
+
+.product_item_each_wrapper .purchase-table-ul.refund li:nth-child(1){
+    width:13%;
+}
+
+.product_item_each_wrapper .purchase-table-ul.refund li:nth-child(2) {
+    width:30%;
+}
+
+.product_item_each_wrapper .purchase-table-ul.refund li:nth-child(3) {
+    width:14%;
+}
+
+.product_item_each_wrapper .purchase-table-ul.refund li:nth-child(4) {
+    width:13%;
+}
+
+.product_item_each_wrapper .purchase-table-ul.refund li:nth-child(4) {
+    width:13%;
 }
 
 /* gauge part */
